# moneyballbench

./: .gitignore  BAKEOFF_RESULTS.md  CALIBRATION_NOTES.md  CAP_PRESSURE_ANALYSIS.md  CAP_PRESSURE_THREADS.md  CLAUDE.md  FINDINGS.md  INFRASTRUCTURE_VALIDATION.md  INTERESTING_THREADS.md  INTERESTING_THREADS_QWEN_DEEPSEEK.md  INTERESTING_THREADS_V4.md  PILOT_RESULTS.md  QUESTIONS.md  README.md  moneyball_bench_v3.md  pyproject.toml
moneyballbench/: __init__.py  config.py  environment.py  leakage_judge.py  noise.py  orchestration.py  prompts.py  stats.py  tools.py
moneyballbench/agent_clients/: __init__.py  openrouter_agent.py
moneyballbench/analysis/: preregistered.py
moneyballbench/baselines/: floor_aware.py  truly_naive.py
moneyballbench/calibration/: probe_agent.py
moneyballbench/gm_clients/: __init__.py  anthropic_client.py  base.py  ollama_client.py  openrouter_client.py
results/: graded_threads_stub.csv
scripts/: analyze_cap_pressure.py  curate_cap_pressure_threads.py  curate_interesting_threads.py  curate_interesting_threads_extended.py  curate_interesting_threads_v4.py  run_calibration.py  run_calibration_bakeoff.py  run_k26_4096_test.py  run_leaderboard.py  run_phase14_pilot.py  run_phase16_pilot.py  run_phase17_pilot.py  run_phase18_pilot.py  run_pilot.py  validate_judge.py
tests/: conftest.py  test_analysis.py  test_auto_sign_penalty.py  test_baselines.py  test_close_deal_validation.py  test_config.py  test_environment.py  test_gm_clients.py  test_leakage_judge.py  test_noise.py  test_orchestration.py  test_rejection_budget.py
(+97 files in other folders)
