[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moneyballbench"
version = "3.0.0"
description = "MoneyBall Bench v3.0 — Long-horizon multi-turn LLM negotiation benchmark"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.39.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[tool.setuptools.packages.find]
include = ["moneyballbench*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "requires_api: marks tests that require live API calls (deselect with '-m \"not requires_api\"')",
]
